--- a/index.html
+++ b/index.html
@@ -10,21 +10,101 @@
   <body>
     <div class="container">
       <h1>Cooking Unit Conversion</h1>
-      <form id="lb-oz">
+      <form class="well" id="lb-oz">
+        <div class="form-group">
+          <h3>Pounds - Ounces</h3>
+          <label for="lb">Pound (lb)</label>
+          <input id="lb" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-oz">Ounce (oz)</label>
+          <output id="output-oz" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="oz-lb">
+      <form class="well" id="oz-lb">
+        <h3>Ounces - Pounds</h3>
+        <div class="form-group">
+          <label for="oz">Ounce (oz)</label>
+          <input id="oz" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-lb">Pound (lb)</label>
+          <output id="output-lb" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="cup-tbsp">
+      <form class="well" id="cup-tbsp">
+        <h3>Cup - Tablespoon</h3>
+        <div class="form-group">
+          <label for="cup1">Cup</label>
+          <input id="cup1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-tbsp1">Tablespoon</label>
+          <output id="output-tbsp1" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="cup-tsp">
+      <form class="well" id="cup-tsp">
+        <h3>Cup - Teaspoon</h3>
+        <div class="form-group">
+          <label for="cup2">Cup</label>
+          <input id="cup2" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-tsp1">Teaspoon (tsp)</label>
+          <output id="output-tsp1" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="tbsp-tsp">
+      <form class="well" id="tbsp-tsp">
+        <h3>Tablespoon - Teaspoon</h3>
+        <div class="form-group">
+          <label for="tbsp1">Tablespoon (tbsp)</label>
+          <input id="tbsp1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-tsp2">Teaspoon (tsp)</label>
+          <output id="output-tsp2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="tbsp-cup">
+      <form class="well" id="tbsp-cup">
+        <h3>Tablespoon - Cup</h3>
+        <div class="form-group">
+          <label for="tbsp2">Tablespoon (tbsp)</label>
+          <input id="tbsp2" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-cup1">Cup</label>
+          <output id="output-cup1" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="tsp-tbsp">
+      <form class="well" class="well" id="tsp-tbsp">
+        <h3>Teaspoon - Tablespoon</h3>
+        <div class="form-group">
+          <label for="tsp1">Teaspoon (tsp)</label>
+          <input id="tsp1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-tbsp2">Tablespoon (tbsp)</label>
+          <output id="output-tbsp2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
-      <form id="tsp-cup">
+      <form class="well" class="well" id="tsp-cup">
+        <h3>Teaspoon - Cup</h3>
+        <div class="form-group">
+          <label for="tsp2">Teaspoon (tsp)</label>
+          <input id="tsp2" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="output-cup2">Cup</label>
+          <output id="output-cup2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Convert!</button>
       </form>
     </div>
   </body>
